[gd_scene load_steps=2 format=3 uid="uid://chest_opening_ui_001"]

[ext_resource type="Script" path="res://scripts/chest_opening_ui.gd" id="1"]

[node name="ChestOpeningUI" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(500, 500)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 48
text = "üéÅ TREASURE CHEST üéÅ"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ChestSprite" type="ColorRect" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0.6, 0.4, 0.2, 1)

[node name="Lock" type="ColorRect" parent="CenterContainer/PanelContainer/VBoxContainer/ChestSprite"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.85, 0, 1)

[node name="Spacer2" type="Control" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CoinsLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 42
text = "üí∞ +50 COINS! üí∞"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="OpenButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 32
text = "üîì OPEN"

[node name="ContinueButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.8, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "‚úì CONTINUE"
